Tests/ShouldSucceed/tryRieks.adl
------------------------------------------------------------
PATTERN "ARM20Test5"
 
critBF   :: Criterium -> Bedrijfsfunctie
MEANING "Een criterium wordt binnen een bedrijfsfunctie toegepast."
 
SPEC Verplichting ISA Criterium
oblTAV :: Verplichting * Bedrijfsfunctie [UNI]
MEANING "Een verplichting moet verantwoord kunnen worden aan een bedrijfsfunctie."
 
SPEC Verwachting ISA Criterium
expTAV :: Verwachting * Bedrijfsfunctie [UNI]
MEANING "Een verwachting wordt gesteld aan een bedrijfsfunctie."
 
PURPOSE RULE "Vaststellen van eigen verwachtingen" IN DUTCH
RULE "Vaststellen van eigen verwachtingen":
I[Criterium] /\ oblTAV;critBF~ |- expTAV;critBF~
MEANING "Als een bedrijfsfunctie een verplichting aan zichzelf stelt, dan verwacht hij dat hij deze nakomt."
 
ENDPATTERN